--- a/package.json
+++ b/package.json
@@ -15,9 +15,16 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "install": "^0.13.0",
     "next": "13.1.6",
+    "next-mdx-remote": "^4.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "recursive-readdir": "^2.2.3",
+    "typescript": "4.9.5",
+    "zod": "^3.20.6"
+  },
+  "devDependencies": {
+    "@types/recursive-readdir": "^2.2.1"
   }
 }
