--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "legacy:create:commands": "tsx ./scripts/fetch-and-create-commands.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
