--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "add": "^2.0.6",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "graphql-request": "^5.1.0",
     "install": "^0.13.0",
     "next": "13.1.6",
     "next-mdx-remote": "^4.3.0",
@@ -29,7 +31,9 @@
   "devDependencies": {
     "@types/recursive-readdir": "^2.2.1",
     "autoprefixer": "^10.4.13",
+    "graphql": "^16.6.0",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "tsx": "^3.12.3"
   }
 }
