--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "legacy:create:commands": "tsx ./scripts/fetch-and-create-commands.ts",
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "preview": "next build && next start",
@@ -20,16 +20,14 @@
     "eslint-config-next": "13.1.6",
     "graphql-request": "^5.1.0",
     "install": "^0.13.0",
-    "next": "13.1.6",
-    "next-mdx-remote": "^4.3.0",
+    "next": "13.2.2",
+    "next-mdx-remote": "^4.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recursive-readdir": "^2.2.3",
     "typescript": "4.9.5",
     "zod": "^3.20.6"
   },
   "devDependencies": {
-    "@types/recursive-readdir": "^2.2.1",
     "autoprefixer": "^10.4.13",
     "graphql": "^16.6.0",
     "postcss": "^8.4.21",
