--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "add": "^2.0.6",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
-    "graphql-request": "^5.1.0",
     "install": "^0.13.0",
     "next": "13.2.2",
-    "next-mdx-remote": "^4.4.0",
+    "next-app-unix-command": "link:",
+    "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5",
@@ -29,6 +29,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "graphql": "^16.6.0",
+    "graphql-request": "^5.2.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "tsx": "^3.12.3"
