--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "install": "^0.13.0",
+    "jotai": "^2.0.3",
     "next": "13.2.2",
     "next-app-unix-command": "link:",
     "next-mdx-remote": "^4.4.1",
