--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "chalk": "^5.2.0",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "graphql-request": "^5.2.0",
