--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-prism-plus": "^1.5.1",
     "typescript": "4.9.5",
     "zod": "^3.20.6"
   },
