--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
     "chalk": "^5.2.0",
     "dotenv": "^16.0.3",
