--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-autolink-headings": "^6.1.1",
     "rehype-prism-plus": "^1.5.1",
+    "rehype-slug": "^5.1.0",
     "typescript": "4.9.5",
     "zod": "^3.20.6"
   },
