--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "rehype-autolink-headings": "^6.1.1",
     "rehype-prism-plus": "^1.5.1",
     "rehype-slug": "^5.1.0",
+    "to-vfile": "^7.2.4",
     "typescript": "4.9.5",
+    "vfile-matter": "^4.0.1",
     "zod": "^3.20.6"
   },
   "devDependencies": {
