--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@vcarl/remark-headings": "^0.1.0",
     "add": "^2.0.6",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
@@ -25,7 +26,6 @@
     "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "rehype-autolink-headings": "^6.1.1",
     "rehype-prism-plus": "^1.5.1",
     "rehype-slug": "^5.1.0",
     "to-vfile": "^7.2.4",
@@ -43,5 +43,10 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "tsx": "^3.12.3"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "next-mdx-remote@4.4.1": "patches/next-mdx-remote@4.4.1.patch"
+    }
   }
 }
