--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.0.10",
     "@vcarl/remark-headings": "^0.1.0",
     "add": "^2.0.6",
+    "clsx": "^1.2.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "install": "^0.13.0",
@@ -26,8 +27,10 @@
     "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "rehype-prism-plus": "^1.5.1",
     "rehype-slug": "^5.1.0",
+    "tailwind-merge": "^1.10.0",
     "to-vfile": "^7.2.4",
     "typescript": "4.9.5",
     "vfile-matter": "^4.0.1",
