--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "rehype-prism-plus": "^1.5.1",
-    "rehype-slug": "^5.1.0",
+    "slugify": "^1.6.5",
     "tailwind-merge": "^1.10.0",
     "to-vfile": "^7.2.4",
     "typescript": "4.9.5",
