--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-app-unix-command": "link:",
     "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "rehype-prism-plus": "^1.5.1",
